--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -12391,7 +12391,7 @@ body {
 }
 
 .section {
-  padding: 70px 0;
+  padding: 0;
   position: relative;
   background-color: #ffffff;
 }
@@ -12521,7 +12521,7 @@ body {
 }
 
 .section {
-  padding: 70px 0;
+  padding: 0;
   position: relative;
   background-color: #ffffff;
 }
